--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="js.css">
+	<link rel="stylesheet" type="text/css" href="carrito.css">
 	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Silkscreen&display=swap" rel="stylesheet">
 	
 	<title>Document</title>
@@ -11,8 +11,8 @@
 <body>
 	<a href="formulario.html">Formulario</a>
 		<h1 class="titulo">CELULARES EXPRESS</h1>
-			<button id="calculadora">calculadora</button>
+			
+<script src="carrito.js"></script>	
 </body>
-<script src="calculadora.js"></script>	
 </html>
 
