--- a/carrito.html
+++ b/carrito.html
@@ -4,14 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="carrito.css">
-	<link href="https://fonts.googleapis.com/css2?family=Anton&family=Silkscreen&display=swap" rel="stylesheet">
-	
-	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<title>CHEAP CLOTHE</title>
 </head>
 <body>
 	<a href="formulario.html">Formulario</a>
-		<h1 class="titulo">CELULARES EXPRESS</h1>
-			
+	<iconify-icon id="icono" class="cart-icon" icon="bi:cart" style="color: green;" width="30" height="30"></iconify-icon>
+		<div class="div-titulo">
+			<h1 class="titulo">CHEAP CLOTHE</h1>
+		</div>	
+		<main id="contenedor-productos" class="contenedor-div"></main>
+<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>		
 <script src="carrito.js"></script>	
 </body>
 </html>
