--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="formulario.css">
+	<link rel="icon" href="assets/ropa.png">
 	<title>CHEAP CLOTHE</title>
 </head>
 <body>
