--- a/carrito.html
+++ b/carrito.html
@@ -9,22 +9,23 @@
 	<title>CHEAP CLOTHE</title>
 </head>
 <body>
-	<a href="formulario.html">Formulario</a>
-	<button id="carritoCerrar">Vaciar carrito</button>
-	<iconify-icon id="icono" class="cart-icon" icon="bi:cart" style="color: green;" width="30" height="30"></iconify-icon>
+	<div class="nav-carrito">
+		<a class="a-form" href="formulario.html">Formulario</a>
+		<button class="cerrarCarrito" id="carritoCerrar">Vaciar carrito</button>
+		<iconify-icon id="icono" class="cart-icon" icon="bi:cart" style="color: rgb(28, 225, 204,);" width="30" height="30"></iconify-icon>
+	</div>
 		<div class="div-titulo">
 			<h1 class="titulo">CHEAP CLOTHE</h1>
 		</div>	
-		<main id="contenedor-productos" class="contenedor-div"></main>
+		<main id="contenedor-productos" class="contenedor-div">
+			<!-- <div class="contenedor">
+				<div>Elementos</div>
+				<div>Elmentos</div>
+				<div>Elmentos</div>
+			</div> -->
+		</main>
 		<div class="modal-contenedor">
-			<div id="modal" class="modal-contenido">
-				<h3>carrito</h3>
-				<div id="carrito-contenedor">
-
-
-				</div>
-			</div>
-
+		
 		</div>		
 <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>		
 <script src="carrito.js"></script>	
